--- a/index.htm
+++ b/index.htm
@@ -8,9 +8,9 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  VniVid Technologies built the AV3 Antivirus app as
+                  Vasupushpa Technologies built the VP Optimizer app as
                   a Free app. This SERVICE is provided by
-                  VniVid Technologies at no cost and is intended for use as
+                   Vasupushpa Technologies at no cost and is intended for use as
                   is.
                 </p> <p>
                   This page is used to inform visitors regarding our
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  AV3 Antivirus unless otherwise defined in this Privacy Policy.
+                  VP Optimizer unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, we
                   may require you to provide us with certain personally
@@ -101,9 +101,9 @@
                   periodically for any changes. We will
                   notify you of any changes by posting the new Privacy Policy on
                   this page.
-                </p> <p>This policy is effective as of 2021-01-02</p> <p><strong>Contact Us</strong></p> <p>
+                </p> <p>This policy is effective as of 2021-01-19</p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about our
-                  Privacy Policy, do not hesitate to contact us at vaishnavianey@gmail.com.
+                  Privacy Policy, do not hesitate to contact us at vasupushpatech@gmail.com.
                 </p>
     </body>
     </html>
